--- a/README
+++ b/README
@@ -18,9 +18,7 @@
 - Groq API (генерація тексту)
 - dotenv (управління конфігурацією)
 
-## Встановлення
+## Запуск
 
-1. Клонуйте репозиторій:
-```bash
-git clone https://github.com/yourusername/insurance-bot.git
-cd insurance-bot
+- pip install -r requirements.txt
+- python main.py
